--- a/mission/index.html
+++ b/mission/index.html
@@ -9,10 +9,16 @@
         content="Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-day Saints. Its mission is to develop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.">
     <meta name="author" content="Talmage Kay">
     <link rel="stylesheet" href="styles.css">
+    <script src="mission.js" defer></script>
 </head>
 
-<body>
-    <div id="content">
+<body class="">
+    <label for="mode">Choose a theme:</label>
+    <select name="mode" id="mode">
+        <option value="light" selected>light</option>
+        <option value="dark" >dark</option>
+    </select>
+    <main>
         <h1>Mission Statement</h1>
         <h2>Brigham Young University-Idaho</h2>
         <hr>
@@ -30,8 +36,7 @@
             <li>Delivering education that is affordable for students and the Church.</li>
         </ol>
         <img src="byui-logo_blue.webp" alt="BYU-Idaho logo">
-    </div>
-    
+    </main>    
 
 </body>
 
