--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -28,31 +28,31 @@
         <h2>Current Work</h2>
         
         <section class="gallery">
-            <figure>
+            <figure class="display-image">
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
-            <figure>
+            <figure class="display-image">
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
-            <figure>
+            <figure class="display-image">
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
-            <figure>
+            <figure class="display-image">
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
-            <figure>
+            <figure class="display-image">
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
-            <figure>
+            <figure class="display-image">
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
-            <figure>
+            <figure class="display-image">
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
-            <figure>
+            <figure class="display-image">
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
-            <figure>
+            <figure class="display-image">
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
         </section>
