--- a/recipes/index.html
+++ b/recipes/index.html
@@ -43,15 +43,15 @@
 
       <section class="search-field">
         <form>
-          <input type="text" placeholder="Find a recipe" />
+          <input type="text" placeholder="Find a recipe" id="search-field"/>
           <button id="search" type="submit">
             <img src="images/search.svg" alt="search" />
           </button>
         </form>
       </section>
     </header>
-    <main>
-      <section class="recipe-card">
+    <main id="recipe-container">
+      <!-- <section class="recipe-card">
         <img
           src="./images/sweet-potato-waffle-md.jpg"
           alt="sweet potato waffles"
@@ -71,7 +71,7 @@
             Savory waffles made with Sweet potato with a hint of Ginger.
           </p>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer>
       <div class="social">
