--- a/bakers bunch/site-plan.html
+++ b/bakers bunch/site-plan.html
@@ -223,14 +223,14 @@
         [Any additional details about home that the wireframe does not make
         clear]
       </p>
-      <img src="#" alt="home page wireframe" />
+      <img src="assets/PXL_20251130_070513773.jpg" alt="home page wireframe" />
 
       <h3>[Page 2]</h3>
       <p>
         [Any additional details about page 2 that the wireframe does not make
         clear]
       </p>
-      <img src="#" alt="page 2 wireframe" />
+      <img src="assets/PXL_20251130_070523352.jpg" alt="page 2 wireframe" />
     </main>
   </body>
 </html>
