fixes to other pages

--- a/bakersbunch/index.html
+++ b/bakersbunch/index.html
@@ -50,7 +50,8 @@
   </head>
   <body>
     <header>
-      <img src="" alt="a cupcake" id="hero-img" />
+      <img src="assets/carlos.png" alt="a cupcake" id="hero-img" />
+      <h1 id="hero-txt">Baker's Bunch</h1>
       <nav>
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
@@ -59,21 +60,21 @@
       </nav>
     </header>
     <main>
-      <h1>Baker's Bunch</h1>
-      <p>
+      <h1>Welcome</h1>
+      <p class="center-p">
         Welcome to <strong class="emphasis">Bakers Bunch</strong>, the sweetest
         spot in town! We’re a cozy, family-run bakery known for fresh pastries,
         warm smiles, and our legendary buttercream frosting.
       </p>
       <section id="menu-snapshot">
         <div class="menu-card">
-          <img src="" alt="menuitem" />
+          <img src="assets/franklinh.png" alt="menuitem" class="baking-pic"/>
         </div>
         <div class="menu-card">
-          <img src="" alt="menuitem" />
+          <img src="assets/emmah.png" alt="menuitem" class="baking-pic"/>
         </div>
         <div class="menu-card">
-          <img src="" alt="menuitem" />
+          <img src="assets/gastonh.png" alt="menuitem" class="baking-pic"/>
         </div>
       </section>
     </main>
