updates to text

--- a/bakersbunch/about-us.html
+++ b/bakersbunch/about-us.html
@@ -59,7 +59,7 @@
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
         <a href="about-us.html">Our team</a>
-        <a href="contact-us.html">Contact Us</a>
+        <!-- <a href="contact-us.html">Contact Us</a> -->
       </nav>
     </header>
     <main>
@@ -75,12 +75,12 @@
         <ul class="baker-list">
           <li class="baker-card">
             <div class="baker-image">
-              <!-- Sparkle the Baker image goes here -->
-              <!-- <img src="sparkle.jpg" alt="Sparkle the Baker" /> -->
+              
+              <img src="assets/chef.png" alt="Sparkle the Baker" />
             </div>
             <div class="baker-info">
               <h3>Sparkle the Baker</h3>
-              <p>
+              <p id="sparkleDescription">
                 A cheerful perfectionist who can frost a cupcake faster than
                 anyone in the city. Loves glitter, sprinkles, and early
                 mornings.
@@ -90,11 +90,10 @@
 
           <li class="baker-card">
             <div class="baker-image">
-              <!-- Maple the Manager image goes here -->
-              <!-- <img src="maple.jpg" alt="Maple the Manager" /> -->
+              <img src="assets/mamabaker.png" alt="Mama Maple" />
             </div>
             <div class="baker-info">
-              <h3>Maple the Manager</h3>
+              <h3>Mama Maple</h3>
               <p>
                 The calm, organized leader of the team. Keeps the bakery running
                 smoothly but has zero tolerance for pastry-related chaos.
