--- a/bakersbunch/menu.html
+++ b/bakersbunch/menu.html
@@ -59,7 +59,7 @@
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
         <a href="about-us.html">Our team</a>
-        <a href="contact-us.html">Contact Us</a>
+        <!-- <a href="contact-us.html">Contact Us</a> -->
       </nav>
     </header>
     <main>
